# mom-rpc

./: .dir-locals.el  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  make-mqtt-rpc-sync.sh  publish-verify.sh  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture.md  fullduplex-design.md
docs/contributing/: ARCHITECTURE.md  CODE_STYLE.md  DOCUMENTATION.md  LOCAL_TESTING.md  QUICK_START.md  TESTING.md
examples/: math_client.rs  math_memory.rs  math_server.rs  sensor_client.rs  sensor_fullduplex.rs  sensor_memory.rs  sensor_server.rs
examples/common/: math_types.rs  mod.rs  protocol.rs
scripts/: ci-docs.sh  ci-lint.sh  ci-test.sh  local-test.sh  pre-publish.sh  sloc-count.sh  start-mosquitto.sh  verify-doc-sync.sh
scripts/manual-tests/: README.md  amqp.sh  dds.sh  mqtt.sh  rabbitmq.sh  redis.sh
src/: broker.rs  broker_builder.rs  broker_mode.rs  correlation.rs  error.rs  lib.rs  macros.rs  retry.rs  rpc_config.rs  transport_builder.rs
src/client/: mod.rs  pending.rs  retry.rs  rpc_client.rs
src/domain/: mod.rs  transport.rs
src/protocol/: correlation.rs  message.rs  mod.rs
src/server/: handler.rs  mod.rs  rpc_server.rs
src/transport/: README.md  memory.rs  mod.rs  runner.rs
src/transport/amqp/: lapin.rs  mod.rs
src/transport/dds/: README.md  dust_dds.rs  dustdds.rs  mod.rs  rustdds.rs
src/transport/memory/: README.md  mod.rs  transport.rs
src/transport/mqtt/: mod.rs  rumqttc.rs
src/transport/mqtt_async_client/: README.md  mod.rs  transport.rs
src/transport/redis/: README.md  mod.rs  redis.rs
src/transport/rumqttc/: mod.rs  transport.rs
tests/: README.md  integration.rs  transport_memory.rs
