[package]
name = "mom-rpc"
version = "0.5.0"
edition = "2021"
authors = ["John Basrai"]
description = "Transport-agnostic async RPC over message-oriented middleware (MQTT, in-memory)"
license = "MIT"
repository = "https://github.com/JohnBasrai/mom-rpc"
rust-version = "1.75"
keywords = ["async", "iot", "messaging", "pubsub", "rpc", ]
categories = ["network-programming", "asynchronous"]
readme = "README.md"
documentation = "https://docs.rs/mom-rpc"

[dependencies]
async-trait  = "0.1"
bytes        = { version = "1", features = ["serde"] }
futures-lite = { version = "2", optional = true }
lapin        = { version = "2", optional = true }
log          = { version = "0.4", optional = true }
rumqttc      = { version = "0.24", optional = true }
serde        = { version = "1", features = ["derive", "rc"] }
serde_json   = "1"
thiserror    = "2"
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-util   = { version = "0.7", features = ["compat"], optional = true }
uuid         = { version  = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
anyhow       = "1.0"
env_logger   = "0.11"
futures      = "0.3.31"
tokio        = { version = "1", features = ["signal"] }
tokio-test   = "0.4"

[[example]]
name = "math_server"
path = "examples/math_server.rs"

[[example]]
name = "math_client"
path = "examples/math_client.rs"

[features]
default = ["logging"]
logging = ["log"]
transport_rumqttc = ["rumqttc"]
transport_lapin = ["lapin", "futures-lite"]

[lints.clippy]
uninlined-format-args = "warn"
