[package]
name = "mom-rpc"
version = "0.7.0"
edition = "2021"
authors = ["John Basrai"]
description = "Transport-agnostic async RPC over message-oriented middleware (AMQP, MQTT, in-memory)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JohnBasrai/mom-rpc"
rust-version = "1.88" # Required by time crate (transitive dependency via lapin).
keywords = ["async", "iot", "messaging", "pubsub", "rpc", ]
categories = ["network-programming", "asynchronous"]
readme = "README.md"
documentation = "https://docs.rs/mom-rpc"

[dependencies]
async-trait  = "0.1"
bytes        = { version = "1", features = ["serde"] }
dust_dds     = { version = "0.14", optional = true }
futures      = { version = "0.3", optional = true } # For DDS
futures-lite = { version = "2", optional = true }
lapin        = { version = "4", optional = true }
log          = { version = "0.4", optional = true }
rumqttc      = { version = "0.25", optional = true }
rustdds      = { version = "0.11", optional = true }
serde        = { version = "1", features = ["derive", "rc"] }
serde_json   = "1"
thiserror    = "2"
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util   = { version = "0.7", features = ["compat"], optional = true }
uuid         = { version  = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
anyhow       = "1.0"
env_logger   = "0.11"
futures      = "0.3.31"
tokio        = { version = "1", features = ["signal"] }
tokio-test   = "0.4"

[[example]]
name = "sensor_server"
path = "examples/sensor_server.rs"

[[example]]
name = "sensor_client"
path = "examples/sensor_client.rs"

[[example]]
name = "sensor_memory"
path = "examples/sensor_memory.rs"

[features]
default           = ["logging"]
logging           = ["log"]
transport_rumqttc = ["rumqttc"]
transport_lapin   = ["lapin", "futures-lite"]
transport_dustdds = ["dep:dust_dds", "futures"]

[lints.clippy]
uninlined-format-args = "warn"
