[package]
name          = "mom-rpc"
version       = "0.9.0"
edition       = "2021"
authors       = ["John Basrai"]
description   = "RPC abstraction for AMQP, DDS, MQTT, and REDIS brokers. Async request/response with automatic correlation handling."
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/JohnBasrai/mom-rpc"
rust-version  = "1.88" # Required by time crate (transitive dependency via lapin).
keywords      = ["async", "iot", "messaging", "pubsub", "rpc", ]
categories    = ["network-programming", "asynchronous"]
readme        = "README.md"
documentation = "https://docs.rs/mom-rpc"
include       = [
    "src/**",
    "examples/**",
    "tests/**",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "Cargo.toml"
]


[dependencies]
async-trait  = "0.1"
bytes        = { version = "1", features = ["serde"] }
dust_dds     = { version = "0.14", features = ["dcps"], optional = true }
futures-util = { version = "0.3", optional = true }
futures      = { version = "0.3", optional = true } # For DDS
futures-lite = { version = "2", optional = true }
lapin        = { version = "4", optional = true }
redis        = { version = "^1.0.3", features = ["tokio-comp", "aio"], optional = true }
rumqttc      = { version = "0.25", optional = true }
serde        = { version = "1", features = ["derive", "rc"] }
serde_json   = "1"
thiserror    = "2"
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util   = { version = "0.7", features = ["compat"], optional = true }
tracing      = { version = "0.1", optional = true }
uuid         = { version  = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
anyhow             = "1.0"
tokio              = { version = "1", features = ["signal"] }
tokio-test         = "0.4"
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "sensor_server"
path = "examples/sensor_server.rs"

[[example]]
name = "sensor_client"
path = "examples/sensor_client.rs"

[[example]]
name = "sensor_memory"
path = "examples/sensor_memory.rs"

[[example]]
name = "sensor_fullduplex"
path = "examples/sensor_fullduplex.rs"

[features]
default            = ["logging"]
logging            = ["tracing"]
transport_rumqttc  = ["rumqttc"]
transport_lapin    = ["lapin", "futures-lite"]
transport_dust_dds = ["dep:dust_dds", "futures"]
transport_redis    = ["dep:redis", "futures-util"]

[lints.clippy]
panic_in_result_fn    = "deny"
uninlined_format_args = "warn"
unwrap_used           = "deny"
expect_used           = "deny"
panic                 = "deny"
